# sat

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
examples/: petersen.rs  print_dimacs.rs
scripts/: id_rsa.enc  travis-doc-upload.cfg
src/: lib.rs
src/solver/: dimacs.rs  mod.rs
tests/: smoke_test.rs
